--- a/src/app/news-card/news-card.component.css
+++ b/src/app/news-card/news-card.component.css
@@ -1,24 +1,42 @@
 :host {
-  width: 95%;
-}
-
-#news-header {
   width: 100%;
-  height: 5svh;
-}
-
-#news-header-first-part {
-  height: 100%;
-  width: 90%;
-  background-color: var(--color-main);
-}
-
-#news-header-second-part {
-  height: 100%;
-  width: 10%;
-  background-color: white;
+  height: 40%;
 }
 
 img {
-  height: 80%;
+  max-width: 100%;
+  height: 45%;
+}
+
+.content {
+  width: 100%;
+  height: 45%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  overflow: hidden;
+}
+
+.tag {
+  background: var(--main-color);
+  color: white;
+  font-size: var(--step--2);
+}
+
+h1 {
+  color: var(--main-color);
+  font-size: var(--step-2);
+}
+
+p  {
+  color: black;
+  font-size: var(--step-o);
+}
+
+.footer {
+  flex: 1;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
 }
